set text shadow buttons and header, fix align items palettes

--- a/src/scss/partials/_common.scss
+++ b/src/scss/partials/_common.scss
@@ -249,6 +249,7 @@ body{
     padding: 0 5%;
     background: $headerColor;
     color: invert($headerColor);
+    text-shadow: $textShadow;
     z-index: 2;
 
     &--index{
